# rocon_authorization

./: CMakeLists.txt  package.xml  setup.py
msg/: User.msg
scripts/: users_manager.py
src/: .manager.py.swp  .users.py.swp  .users_table.py.swp  __init__.py
src/rocon_authorization/: manager.py  users.py  users_table.py
srv/: GetUsersRoles.srv  SetUsersRoles.srv
