<?xml version="1.0"?>
<package>
  <name>rocon_authorization</name>
  <version>0.0.1</version>
  <description>ROCON package to manage User-Role authorization in a concert</description>

  <author email="iarcuschin@creativa77.com">Ivan Arcuschin</author>
  <maintainer email="iarcuschin@crativa77.com">Ivan Arcuschin</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/creativa77/rocon_authorization</url>
  <url type="bugtracker">https://github.com/creativa77/rocon_authorization/issues</url>
  <url type="repository">https://github.com/creativa77/rocon_authorization</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <!--<build_depend>python-catkin-pkg</build_depend>

  <run_depend>python-rospkg</run_depend>-->
  <run_depend>rospy</run_depend>
  <!--<run_depend>rocon_console</run_depend>
  <run_depend>rocon_python_comms</run_depend>
  <run_depend>rocon_std_msgs</run_depend>
  <run_depend>std_msgs</run_depend>-->
</package>
